--- a/fitness/contact.html
+++ b/fitness/contact.html
@@ -75,36 +75,23 @@
 						<!-- START #fh5co-menu-wrap -->
 						<nav id="fh5co-menu-wrap" role="navigation">
 							<ul class="sf-menu" id="fh5co-primary-menu">
-								<li>
+								<li class="active">
 									<a href="index.html">Home</a>
 								</li>
 								<li>
-									<a href="classes.html" class="fh5co-sub-ddown">Classes</a>
+									<a href="store.php" class="fh5co-sub-ddown">Store</a>
 									 <ul class="fh5co-sub-menu">
-									 	<li><a href="left-sidebar.html">Web Development</a></li>
-									 	<li><a href="right-sidebar.html">Branding &amp; Identity</a></li>
-										<li>
-											<a href="#" class="fh5co-sub-ddown">Free HTML5</a>
-											<ul class="fh5co-sub-menu">
-												<li><a href="http://freehtml5.co/preview/?item=build-free-html5-bootstrap-template" target="_blank">Build</a></li>
-												<li><a href="http://freehtml5.co/preview/?item=work-free-html5-template-bootstrap" target="_blank">Work</a></li>
-												<li><a href="http://freehtml5.co/preview/?item=light-free-html5-template-bootstrap" target="_blank">Light</a></li>
-												<li><a href="http://freehtml5.co/preview/?item=relic-free-html5-template-using-bootstrap" target="_blank">Relic</a></li>
-												<li><a href="http://freehtml5.co/preview/?item=display-free-html5-template-using-bootstrap" target="_blank">Display</a></li>
-												<li><a href="http://freehtml5.co/preview/?item=sprint-free-html5-template-bootstrap" target="_blank">Sprint</a></li>
-											</ul>
-										</li>
-										<li><a href="#">UI Animation</a></li>
-										<li><a href="#">Copywriting</a></li>
-										<li><a href="#">Photography</a></li> 
+									 	<li><a href="left-sidebar.html">Supplements</a></li>
+									 	<li><a href="right-sidebar.html">Equipment</a></li>
 									</ul>
 								</li>
 								<li>
-									<a href="schedule.html">Schedule</a>
+									<a href="schedule.html">Programs</a>
 								</li>
-								<li><a href="trainer.html">Trainers</a></li>
 								<li><a href="about.html">About</a></li>
-								<li class="active"><a href="contact.html">Contact</a></li>
+								<li><a href="contact.html">Contact</a></li>
+                                <li><a href="contact.html">Account</a></li>
+								<!-- <li><a href="#" data-toggle="modal" data-target="#loginModal">Login</a></li> -->
 							</ul>
 						</nav>
 					</div>
