--- a/fitness/index.html
+++ b/fitness/index.html
@@ -79,7 +79,7 @@
 									<a href="index.html">Home</a>
 								</li>
 								<li>
-									<a href="classes.html" class="fh5co-sub-ddown">Store</a>
+									<a href="store.php" class="fh5co-sub-ddown">Store</a>
 									 <ul class="fh5co-sub-menu">
 									 	<li><a href="left-sidebar.html">Supplements</a></li>
 									 	<li><a href="right-sidebar.html">Equipment</a></li>
@@ -91,7 +91,7 @@
 								<li><a href="about.html">About</a></li>
 								<li><a href="contact.html">Contact</a></li>
                                 <li><a href="contact.html">Account</a></li>
-								<li><a href="#" data-toggle="modal" data-target="#loginModal">Login</a></li>
+								<!-- <li><a href="#" data-toggle="modal" data-target="#loginModal">Login</a></li> -->
 							</ul>
 						</nav>
 					</div>
