--- a/fitness/index.html
+++ b/fitness/index.html
@@ -71,7 +71,7 @@
 				<div class="container">
 					<div class="nav-header">
 						<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i></a>
-						<h1 id="fh5co-logo"><a href="index.html">Git<span>Fit</span></a></h1>
+						<h1 id="fh5co-logo"><a href="index.html">Get<span>Fit</span></a></h1>
 						<!-- START #fh5co-menu-wrap -->
 						<nav id="fh5co-menu-wrap" role="navigation">
 							<ul class="sf-menu" id="fh5co-primary-menu">
@@ -148,16 +148,15 @@
 					<div class="row">
 						<div class="col-md-4 animate-box">
 							<h3 class="section-title">About Us</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics.</p>
+							<p>We are three computer science students with a passion for fitness. Our Goal with this project is to proviode our users a wealth of information about fitness as well as a one stop shop for their equipment and suplement needs. </p>
 						</div>
 
 						<div class="col-md-4 animate-box">
 							<h3 class="section-title">Our Address</h3>
 							<ul class="contact-info">
-								<li><i class="icon-map-marker"></i>198 West 21th Street, Suite 721 New York NY 10016</li>
+								<li><i class="icon-map-marker"></i>300 College Park, Dayton, OH 45469</li>
 								<li><i class="icon-phone"></i>+ 1235 2355 98</li>
-								<li><i class="icon-envelope"></i><a href="#">info@yoursite.com</a></li>
-								<li><i class="icon-globe2"></i><a href="#">www.yoursite.com</a></li>
+								<li><i class="icon-envelope"></i><a href="#">fit@getfit.com</a></li>
 							</ul>
 						</div>
 						<div class="col-md-4 animate-box">
