--- a/fitness/schedule.html
+++ b/fitness/schedule.html
@@ -71,7 +71,7 @@
 				<div class="container">
 					<div class="nav-header">
 						<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i></a>
-						<h1 id="fh5co-logo"><a href="index.html">Fit<span>ness</span></a></h1>
+						<h1 id="fh5co-logo"><a href="index.html">Get<span>Fit</span></a></h1>
 						<!-- START #fh5co-menu-wrap -->
 						<nav id="fh5co-menu-wrap" role="navigation">
 							<ul class="sf-menu" id="fh5co-primary-menu">
@@ -81,8 +81,8 @@
 								<li>
 									<a href="store.php" class="fh5co-sub-ddown">Store</a>
 									 <ul class="fh5co-sub-menu">
-									 	<li><a href="left-sidebar.html">Supplements</a></li>
-									 	<li><a href="right-sidebar.html">Equipment</a></li>
+									 	<li><a href="supplements.php">Supplements</a></li>
+									 	<li><a href="equipment.php">Equipment</a></li>
 									</ul>
 								</li>
 								<li>
@@ -96,7 +96,7 @@
 						</nav>
 					</div>
 				</div>
-			</header>		
+			</header>	
 		</div>
 		<!-- end:fh5co-header -->
 		<div class="fh5co-parallax" style="background-image: url(images/home-image-5.jpg);" data-stellar-background-ratio="0.5">
